--- a/rootfs/nginx/conf/nginx.conf
+++ b/rootfs/nginx/conf/nginx.conf
@@ -1,9 +1,9 @@
-#user web;
 worker_processes auto;
 pid /nginx/run/nginx.pid;
+daemon off;
 
 events {
-    worker_connections 1024; 
+    worker_connections 2048; 
     use epoll;
 }
 
@@ -11,39 +11,21 @@ http {
     include /nginx/conf/mime.types;
     default_type  application/octet-stream;
 
-    access_log /nginx/logs/nginx_access.log combined;
-    error_log /nginx/logs/nginx_error.log error;
+    access_log /nginx/logs/access.log combined;
+    error_log /nginx/logs/error.log error;
+
+    client_max_body_size <UPLOAD_MAX_SIZE>;
     
+    aio threads;
     sendfile on;
     keepalive_timeout 15;
     keepalive_disable msie6;
     keepalive_requests 100;
     tcp_nopush on;
-    tcp_nodelay off;
+    tcp_nodelay on;
     server_tokens off;
     
-    gzip on;
-    gzip_comp_level 5;
-    gzip_min_length 512;
-    gzip_buffers 4 8k;
-    gzip_proxied any;
-    gzip_vary on;
-    gzip_disable "msie6";
-    gzip_types
-        text/css
-        text/javascript
-        text/xml
-        text/plain
-        text/x-component
-        application/javascript
-        application/x-javascript
-        application/json
-        application/xml
-        application/rss+xml
-        application/vnd.ms-fontobject
-        font/truetype
-        font/opentype
-        image/svg+xml;
+    gzip off;
 
     include /nginx/sites-enabled/*.conf;
 }
